style: add red borders to input fields that is invalid but have content, this is to prevent too much noise when the user has just entered the field

--- a/style.css
+++ b/style.css
@@ -258,7 +258,9 @@ button[type="button"] {
 }
 
 /* Validation styles */
-input:focus:invalid {
+
+/* This will apply red border to input fields that is invalid and but have content */
+input:focus:not(:placeholder-shown):invalid {
   border-color: #ec6769;
 }
 
